Fix login page background alignment

--- a/static/styles/public/style.css
+++ b/static/styles/public/style.css
@@ -118,7 +118,7 @@ input[type="text"]:invalid, input[type="password"]:invalid {
   background-size: contain;
   display: flex;
   align-items: center;
-  margin: 0 10%;
+  padding: 0 10%;
 }
 
 #maincontent {
